--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>사진첩을 써야할 것 같아요!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>카메라를 써야할 것 같아요!</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>마이크를 써야할 것 같아요!</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
