--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,11 @@ dependencies:
   shared_preferences: ^2.0.15
   modal_bottom_sheet: ^2.0.1
   dio: ^4.0.6
+  flutter_secure_storage: ^5.0.2
+  kakao_flutter_sdk: ^1.1.1
+  kakao_flutter_sdk_user: ^1.1.1
+  flutter_kakao_login: ^3.4.0
+
 
 dev_dependencies:
   flutter_test:
